public/assets/css/main.css
/* ... */
.pagination a:hover:not(.active) {background-color: #ddd;}

/* Card Details */
.card-details {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    align-content: center;
    margin-left: 10rem;
    margin-right: 10rem;
    flex: 1;
    gap: 1rem;
}

.card-detail {
    flex: 0 0 auto;
    margin: 16px;
    text-align: center;
    width: 50%;
}

.card-detail-image {
    border-radius: 30px;
    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
    width: 40vw;
}

.card-detail h1 {
    margin: 0;
    width: 100%;
    border-bottom: 1px solid #009879;
}

.card-detail a {
    color: #009879;
    margin: 1rem;
}

.card-detail a:hover {
    color: #007a5f;
}

/* Sets */
.sets {
    display: flex;
    flex-wrap: wrap;
    flex-direction: column;
    width: 80vw;
    margin: 0 auto;
}

.sets a {
    text-decoration: none;
    color: black;
}

.series {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    align-content: center;
    flex: 1;
    gap: 1rem;
}

.series-sets {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    align-content: center;
    flex: 1;
    gap: 1rem;
    flex-wrap: wrap;
}

.set-container {
    flex: 0 0 500px; 
    margin-right: 20px; 
    margin-bottom: 20px; 
}

.set-image {
    width: 100%;
    height: 100px;
    text-align: center;
    padding: 10px;
    box-sizing: border-box;
}

.set-image img {
    max-width: 100%;
    max-height: 100%;
    object-fit: scale-down;
}

/* Collections-specific */
.collections a {
    text-decoration: none;
    color: black;
}

/* Responsive Design for Ultra-wide monitors */
@media screen and (min-width: 2000px) {
    .card-detail-image {
        width: 40rem;
    }

    .cards {
        max-width: 50vw;
        margin: 0 auto;
    }
}

/* Responsive Design for less than 1300 pixels, but more than 600px*/
@media screen and (max-width: 1300px) {
    .card-details {
        flex-direction: column;
        width: 100vw;
        flex-shrink: 1;
        gap: 1rem;
        text-align: center;
        margin: 0;
    }
    
    .card-detail {
        flex: 1;
        display: flex;
        flex-direction: column;
        align-self: center;
        width: 90%;
        align-items: center;
        flex-grow: 1;
    }

    .card-detail:nth-child(2) {
        flex-grow: 2;
      }

    .card-detail-image {
        flex: 1;
        display: flex;
        justify-content: center;
        align-items: center;
        height: 100%;
        width: 100%;
    }
}

/* Responsive Design for Mobile */
@media screen and (max-width: 600px) {
    .controls {
        flex-direction: column;
    }

    #card-search-controls {
        display: none; /* Hide table / cards dropdown on mobile */
    }

    .controls .search-container {
        width: 100%;
    }

    .controls .search-container input[type="text"] {
        height: 30px;
    }

    .ebay-links a {
        display: block;
    }

    .series-sets {
        display: flex;
        flex-wrap: wrap;
    }

    .set-container {
        flex: none;
        width: 100%;
        margin: 0;
    }

    .set-image {
        display: flex;
        justify-content: center;
        align-items: center;
        height: 140px;
    }

    .set-image img {
        max-width: 100%;
        max-height: 100%;
    }

    .pagination {
        flex-wrap: wrap;
        align-self: center;
    }

    .pagination a {
        margin-bottom: 1em;
    }

    .navbar .container {
        margin: 0;
        width: 90vw;
        max-width: 90vw;
    }

    .navbar-menu {
        display: none;
        flex-direction: column;
        position: absolute;
        top: 100%;
        right: 0;
        z-index: 20;
        width: 50%;
        margin: 0;
        padding: 0;
        background-color: #f5f5f5;
        box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
        max-height: 100vh;
        height: auto;
        padding-bottom: 1rem;
    }

    .navbar-menu ul .navbar-item {
        justify-content: end;
        font-weight: bold;
        font-size: 1.25rem;
        padding: 0.75rem 1.5rem;
        border-bottom: 1px solid #009879;
    }
    
    .navbar-menu.is-active {
        display: flex;
        flex-direction: column;
    }
    
    .navbar-menu.is-active ul {
        flex-direction: column;
        align-items: flex-start;
        padding-left: 1rem;
        padding-right: 1rem;
    }
    
    .navbar-menu.is-active ul li {
        margin: 0;
        width: 100%;
    }
    
    .navbar-menu.is-active ul li a {
        padding: 0.75rem;
    }
    
    .navbar-burger {
        display: block;
    }
}

